--- a/resources/css/scss/pages/_inner.scss
+++ b/resources/css/scss/pages/_inner.scss
@@ -100,6 +100,7 @@ h1.page_title {
     margin-right: auto;
 }
 
+
 /*.ct_*/
 .address_boxes {
     margin-top: -4px;
@@ -840,6 +841,20 @@ h1.page_title {
 }
 
 // 2500 page
+.intro_text_2500 {
+
+	margin-right: 40px;
+
+	@include media(max-width, 1024px) {
+		margin-right: 30px;
+	}
+
+	@include media(max-width, 768px) {
+		margin-right: 0;
+	}
+	
+}
+
 .cta_desktop_box {
     border: 1px solid #E5E5E5;
     padding: 50px;
@@ -850,10 +865,79 @@ h1.page_title {
         }
     }
 
+		.call_carol_num {
+
+			margin-left: 0;
+
+			p {
+				margin-bottom: 0;
+			}
+		}
+
     @include media(max-width, 1023px) {
         padding: 0;
         border: 0;
     }
+
+		@media only screen and (min-width:783px) and (max-width:1199px){
+			&.cta_desktop_box {
+
+				.wp-block-group__inner-container {
+					padding-right: 0;
+				}
+
+				.call_carol_col {
+					p {
+						font-size: 16px !important;
+					}
+				}
+				.call_carol_num {
+					p {
+						font-size: 36px !important;
+					}
+				}
+				
+				.small_media_text {
+
+					.wp-block-media-text__content {
+						p {
+							font-size: 14px !important;
+						}
+					}
+				}
+			}
+			
+		}
+		
+		@media only screen and (min-width:1200px) and (max-width:1490px){
+			&.cta_desktop_box {
+
+				.wp-block-group__inner-container {
+					padding-right: 0;
+				}
+
+				.call_carol_col {
+					p {
+						font-size: 16px !important;
+						margin-right: 20px;
+					}
+				}
+				.call_carol_num {
+					p {
+						font-size: 46px !important;
+					}
+				}
+				
+				.small_media_text {
+
+					.wp-block-media-text__content {
+						p {
+							font-size: 20px !important;
+						}
+					}
+				}
+			}
+		}
 
     @include media(max-width, 480px) {
         .section_subtitle {
@@ -880,6 +964,21 @@ h1.page_title {
     }
 }
 
+@media only screen and (min-width:783px) and (max-width:1200px){
+	.carol-royse-team-pic {
+
+		.wp-block-group__inner-container {
+			padding: 0;
+			padding-left: 30px;
+		}
+		
+		figure {
+			margin-top: -180px !important;
+			width: 400px;
+		}
+	}
+}
+
 .border_none {
     border: 0 !important;
 }
@@ -887,7 +986,7 @@ h1.page_title {
 .desktop_only {
     visibility: visible;
 
-    @include media (max-width, 1023px) {
+    @include media (max-width, 782px) {
         display: none;
 
         &.sec_info_wrap {
@@ -900,7 +999,7 @@ h1.page_title {
 .mobile_only {
     display: none;
 
-    @include media (max-width, 1023px) {
+    @include media (max-width, 782px) {
         display: block;
 
         &.sec_info_wrap {
@@ -1408,16 +1507,25 @@ ul.star-rating li i {
         @include media (max-width, 480px) {
 
             .call_carol_col {
-                flex-basis: 23% !important;
+                flex-basis: 25% !important;
+
+								p {
+									font-size: 13px !important;
+								}
             }
 
             .call_carol_num {
 
-                flex-basis: 85% !important;
-                margin-left: 12px !important;
+                flex-basis: 75% !important;
+                margin-left: 0 !important;
+								text-align: right;
 
                 p {
-                    font-size: 2em !important;
+                    font-size: 36px !important;
+
+										strong {
+											font-weight: 600;
+										}
                 }
             }
 
